[metadata]
name = unittest_expander
author = Jan Kaliszewski (zuo)
author_email = zuo@kaliszewski.net
description = Easy and flexible unittest parameterization.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/zuo/unittest_expander
keywords = unittest, testing, parameterization, parametrization
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
py_modules = unittest_expander
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
setup_requires = setuptools>=44; wheel
