[metadata]
name = unittest_expander
version = 0.4.1.dev3
description = Easy and flexible unit test parametrization
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jan Kaliszewski (zuo) and others...
maintainer = Jan Kaliszewski (zuo)
maintainer_email = zuo@kaliszewski.net
license = MIT
url = https://github.com/zuo/unittest_expander
download_url = https://pypi.org/project/unittest_expander/#files
project_urls =
    Documentation = https://unittest-expander.readthedocs.io/en/stable/
    Source = https://github.com/zuo/unittest_expander
    Tracker = https://github.com/zuo/unittest_expander/issues
keywords = unittest, testing, parametrization, parameterization
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing

[options]
py_modules = unittest_expander
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
